feat: Added soft dependencies field to PluginDescriptor + added PluginDescriptor#from(ClassLoader)